# events-framework-template

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
data/: events.csv
event_types/: example.json
sources/: example_source.py
