[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "events-framework-template"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "events-framework @ git+https://github.com/mDieguezVilas/events-framework.git@v0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
include = ["sources*"]